--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 
     <style>
         body {
-            background-color: #ffffff; /* White background */
-            color: #000000; /* Black text */
+            background-color: #ffffff;
+            color: #000000;
             text-align: center; 
             margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            font-family: 'Roboto', sans-serif; /* Roboto font */
-            position: relative; /* Add relative positioning */
+            font-family: 'Roboto', sans-serif;
+            position: relative;
         }
         .top-text {
-            position: absolute; /* Absolute positioning */
-            top: 0; /* Align to the top */
-            left: 50px; /* Align to the left */
-            width: 100%; /* Full width */
-            font-size: 0.8em; /* Adjust font size */
-            padding: 20px; /* Add padding */
-            box-sizing: border-box; /* Include padding in width calculation */
+            position: absolute;
+            top: 0;
+            left: 50px;
+            width: 100%;
+            font-size: 0.8em;
+            padding: 20px;
+            box-sizing: border-box;
         }
         .sidebar {
             position: fixed;
@@ -36,69 +36,68 @@
             top: 0;
             bottom: 0;
             width: 250px;
-            background-color: #000000; /* Black sidebar background */
+            background-color: #000000;
             padding: 20px;
             box-sizing: border-box;
             overflow-y: auto;
-            border-right: 1px solid #cccccc; /* Light gray border right */
+            border-right: 1px solid #cccccc;
         }
         .output-container {
-            background-color: #ffffff; /* White background */
+            background-color: #ffffff;
             margin: 20px auto;
             padding: 20px; 
             border-radius: 10px; 
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); /* Light shadow */
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
             text-align: left;
             max-width: 600px; 
         }
         h1, p {
-            color: #f7f6f6; /* Black text */
+            color: #f7f6f6;
             font-size: 3em; 
         }
         span {
-            color: #ffffff; /* White text */
+            color: #ffffff;
         }
         h2 {
-            color: #040404; /* White text */
+            color: #040404;
             font-size: 1.5em;
-            margin-top: 20px; /* Add some spacing */
+            margin-top: 20px;
         }
         ul {
-            color: #101010; /* White text */
-            list-style-type: none; /* Remove default list style */
-            padding-left: 0; /* Remove default list padding */
+            color: #101010;
+            list-style-type: none;
+            padding-left: 0;
         }
         li {
-            margin-bottom: 10px; /* Add some spacing between list items */
+            margin-bottom: 10px;
         }
         input[type="file"],
         button {
-            padding: 10px 20px; /* Add padding to input and button */
+            padding: 10px 20px;
             font-size: 1em;
             border: none;
             border-radius: 5px;
-            background-color: #faf9f9; /* Black background */
-            color: #070707; /* White text */
-            cursor: pointer; /* Show pointer cursor on hover */
-            transition: background-color 0.3s ease; /* Smooth transition */
+            background-color: #faf9f9;
+            color: #070707;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
         }
         input[type="file"]:hover,
         button:hover {
-            background-color: #333333; /* Dark gray on hover */
+            background-color: #333333;
         }
         input[type="file"] {
-            display: none; /* Hide file input */
+            display: none;
         }
         button {
-            margin-top: 10px; /* Add some spacing */
+            margin-top: 10px;
         }
-        
     </style>
 </head>
 <body>
     <div class="top-text">
-                    You can  get summaries of candidate profiles, and figure out which candidates would be best suited for a particular role and more.<br>
-                    >Upload your pdf and get the data !!
+        You can  get summaries of candidate profiles, and figure out which candidates would be best suited for a particular role and more.<br>
+        >Upload your pdf and get the data !!
     </div>
 
     <div class="sidebar">
@@ -137,5 +136,5 @@
             </ul>
         {% endif %}
     </div>
-    
+</body>
 </html>
